@@ -121,6 +121,7 @@ showBigPalette<-function(wh=NULL){
 #' @param breaks either vector of breaks, or number of breaks (integer) or a
 #'   number between 0 and 1 indicating a quantile, between which evenly spaced
 #'   breaks should be calculated.
+#' @param makeSymmetric whether to make the range of the breaks symmetric around zero (only used if not all of the data is non-positive and not all of the data is non-negative)
 #'
 #' @rdname plottingFunctions
 #'
@@ -132,9 +133,10 @@ showBigPalette<-function(wh=NULL){
 #'
 #' @examples
 #' setBreaks(.9,simData)
-setBreaks<-function(breaks,data){
-  isPositive<-all(data>=0)
-    if(length(breaks)>0 && !is.na(breaks)){
+setBreaks<-function(breaks,data,makeSymmetric=FALSE){
+	isPositive<-all(data>=0)
+	isNegative<-all(data<=0)
+	if(length(breaks)>0 && !is.na(breaks)){
         #get arround bug in aheatmap
         #if colors are given, then get back 51, unless give RColorBrewer, in which case get 101! Assume user has to give palette.
         #TO DO: might not need any more with updated aheatmap.
@@ -145,15 +147,25 @@ setBreaks<-function(breaks,data){
                   if(breaks<0.5) breaks<-1-breaks
                   uppQ<-if(isPositive) quantile(data[data>0],breaks,na.rm=TRUE) else quantile(data,breaks,na.rm=TRUE)
                   lowQ<-if(isPositive) min(data) else quantile(data,1-breaks,na.rm=TRUE)
-                  quantMin<-if(isTRUE(all.equal(round(lowQ,5),round(min(data),5)))) TRUE else FALSE
-                  quantMax<-if(isTRUE(all.equal(round(uppQ,5),round(max(data),5)))) TRUE else FALSE
                   #browser()
-                  if(!quantMin & !quantMax) breaks<-c(min(data),seq(lowQ,uppQ,length=ncols-1),max(data))
-                  else{
-                    if(!quantMin & quantMax) breaks<-c(min(data),seq(lowQ,max(data),length=ncols))
-                    if(quantMin & !quantMax) breaks<-c(seq(min(data),uppQ,length=ncols),max(data))
-                    if(quantMin & quantMax) breaks<-seq(min(data),max(data),length=ncols+1)
-                  }
+				  if(makeSymmetric & !isPositive & !isNegative){
+					  absq<-max(abs(c(lowQ,uppQ)))
+					  absm<-max(abs(c(min(data),max(data))))
+					  #is largest quantile also max of abs(data)?
+					  quantAllMax <- if( isTRUE( all.equal(round(absq,5), round(absm,5)))) TRUE else FALSE
+	                  if(!quantAllMax) breaks <- c(-absm, seq(-absq,absq,length=ncols-1), absm)
+					  else breaks <- seq(absm,absm,length=ncols+1)
+				  }
+				  else{
+					  #determine if those quantiles are min/max of data
+	                  quantMin <- if( isTRUE( all.equal(round(lowQ,5), round(min(data),5)))) TRUE else FALSE
+	                  quantMax<-if( isTRUE( all.equal(round(uppQ,5),round(max(data),5)))) TRUE else FALSE
+	                  if(!quantMin & !quantMax) breaks <- c(min(data), seq(lowQ,uppQ,length=ncols-1), max(data))
+	                  if(!quantMin & quantMax) breaks <- c(min(data), seq(lowQ,max(data),length=ncols))
+	                  if(quantMin & !quantMax) breaks <- c(seq(min(data),uppQ,length=ncols), max(data))
+	                  if(quantMin & quantMax) breaks<-seq(min(data),max(data),length=ncols+1)
+				  	
+				  }
 #                     if(isPositive){
 #                     breaks<-c(seq(min(data),quantile(data[data>0],breaks,na.rm=TRUE),length=ncols),max(data))
 #                   else breaks<-c(min(data),seq(quantile(data,1-breaks,na.rm=TRUE),quantile(data,breaks,na.rm=TRUE),length=ncols-1),max(data))
